# cats-build

./: .gitignore  .gitmodules  01.pull-code.bat  01.pull-code.sh  02.push-code  02.push-code.bat  02.push-code.sh  03.clean-all.bat  03.clean-all.sh  04.build-inline.bat  04.build-inline.sh  05.run-tests.bat  05.run-tests.sh  06.gen-runtime-paths.bat  06.gen-runtime-paths.sh  07.run-app.bat  08.git-status.bat  08.git-status.sh  10.build-final.sh  CMakeLists.txt  README  README.md  README.push  cats-build.files  preinstall-hook  repositories
